--- a/final-project/package.json
+++ b/final-project/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
+    "mongodb": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3"
