--- a/final-project/package.json
+++ b/final-project/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "jest": "^29.7.0",
     "mongodb": "^6.13.0",
+    "next.js": "^1.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3"
