--- a/final-project/.env
+++ b/final-project/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/mydatabase
-PORT=3002
+MONGODB_URI=mongodb+srv://loves2reed10:mFwhNxH4izVqiDp@cluster0.ph5qo.mongodb.net/TwitchStreamers
+PORT=3000
 VITE_REACT_APP_TWITCH_API_TOKEN=oockyvte98rmkbg8opnyij6wpj332o
 VITE_REACT_APP_TWITCH_CLIENT_ID=jn4gn39jbg5ex7zwfrl1urjf0zs64g
